# mazy-video-email-sender

./: .coveragerc  .env  .env.example  .env.local.sample  .gitignore  Makefile  README.md  example.json  lambda_function.py  local_testing.py  pyproject.toml  pytest.ini  template.yaml  tox.ini
.github/workflows/: pipeline.yml
app/: email_sender.py  main.py  sqs_consumer.py
app/templates/: base.html
src/: aws_clients.py  cognito_utils.py  config.py  database.py  email_sender.py  history.py  lambda_function.py  requirements-test.txt  requirements.txt  s3_utils.py
src/history/: database.py
src/templates/: base.html
tests/unit/: conftest.py  test_cognito_utils.py  test_database.py  test_email_sender.py  test_lambda_function.py
