[project]
name = "mazy-video-tools-notification"
version = "1.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=xml"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
relative_files = true
source = ["src"]
branch = true
